# mysql_udf_dotnet

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  MySQLDotNet.def  README.md  README.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  mysql_udf.c  mysql_udf.rc  mysql_udf.sln  resource.h  sql_install.sql  udf_example.c  udf_example.def  udf_example.sln  udf_example.vcxproj  udf_example.vcxproj.filters
MySQLHostManager40/: .gitignore  MySQLHostManager40.csproj  __MysqlHostManager.cs  generic_signing.snk  mysqld.exe.config
MySQLHostManager40/Properties/: AssemblyInfo.cs
MySQLTestHarness/: MySQLTestHarness.csproj  Program.cs
MySQLTestHarness/Properties/: AssemblyInfo.cs
MySQLUDFInstaller x64/: MySQLUDFInstaller x64.wixproj  Product.wxs
MySQLUDFInstaller x86/: MySQLUDFInstaller x86.wixproj  Product.wxs
NativeUnitTests/: NativeUnitTests.vcxproj  unittest1.cpp
RelWithDebInfo/: udf_example.exp  udf_example.lib
clr_host/: ClrHost.cpp  ClrHost.h  clr_host.vcxproj  clr_host.vcxproj.filters  resource.h  stdafx.cpp  stdafx.h
mysql_managed_interface/: ICustomAssembly.cs  IManagedHost.cs  IUnmanagedHost.cs  MySQLAssemblyList.cs  MySQLHostManager.cs  MySQLHostManager.csproj  MySQLHostManager20.csproj  mysql_managed_interface.csproj  mysqld.exe.config  mysqld.exe.config_full
mysqldotnet_custom/: Add3ToIntCustom.cs  CustomMySQLClass.cs  FullTrustAssemblyDemo.cs  GetWebPage.cs  MySQLCustomClass.csproj  PartialTrustAssemblyDemo.cs  PointsInRadius.cs  generic_key.snk
(+16 files in other folders)
